# Rust-Project

./: .gitignore  Cargo.toml  books.db
assets/: cart.html  index.html  login.html  script.js  search.html  sytle.css
assets/buffer/: index.html  script.js  sytle.css
assets/css/: common.css  gwc.css  index.css  list.css  my.css  pj.css  register.css
assets/html/: gwc.html  list.html  logo.html  my.html  pj.html  register.html
assets/js/: gwc.js
backend/: Cargo.toml  books.db
backend/src/: book.rs  main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs  style.css
src/: book.rs  main.rs  user.rs
